test/functions/resolution/errors/testBadCallCandidates.11.good
testBadCallCandidates.chpl:14: In method 'test':
testBadCallCandidates.chpl:18: error: unresolved call 'C.foo(42)'
testBadCallCandidates.chpl:33: note: this candidate did not match: D.foo(x: C)
testBadCallCandidates.chpl:18: note: because method call receiver with type 'borrowed C'
testBadCallCandidates.chpl:32: note: is passed to formal 'this: borrowed D'
testBadCallCandidates.chpl:18: note: other candidates are:
testBadCallCandidates.chpl:5: note:   C.foo(x: string)
note: and 2 other candidates, use --print-all-candidates to see them
